--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04, windows-2022]
-        ruby: ['1.8.7', '1.9.3', '2.0', '2.1', '2.2', '2.3', '2.4', '2.5', '2.6', '2.7', '3.0', '3.1', '3.2', '3.3', jruby-1.7, jruby-9.0, jruby-9.1, jruby-9.2, jruby-9.3, jruby-9.4]
+        ruby: ['1.8.7', '1.9.3', '2.0', '2.1', '2.2', '2.3', '2.4', '2.5', '2.6', '2.7', '3.0', '3.1', '3.2', '3.3', '3.4', jruby-1.7, jruby-9.0, jruby-9.1, jruby-9.2, jruby-9.3, jruby-9.4]
         architecture: [default]
         name_suffix: ['']
         experimental: [false]
@@ -17,6 +17,8 @@ jobs:
             ruby: '1.8.7'
           - os: windows-2022
             ruby: jruby-1.7
+          - os: windows-2022
+            ruby: '3.4'
         include:
           - os: windows-2022
             ruby: '2.0'
